--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <h3>Portfolio</h3>
       <ul>
         <li><strong><em>Web Developer</em></strong>, Relaxr 2015 - present<br>Developed a multi-column layout blog, landing page and contact forms that render on mobile devices</li><br><br>
-        <img src="#" alt="Relaxr Website" title="Relaxr Websoite">
+        <img src="https://codepen.io/oliviaphifer/full/EqbgOP" alt="Relaxr Website" title="Relaxr Website">
         <iframe src="https://codepen.io/oliviaphifer/full/EqbgOP></iframe>
       </ul>
     </main>
