--- a/index.html
+++ b/index.html
@@ -25,8 +25,8 @@
       <h3>Portfolio</h3> 
       <ul>
         <li><strong><em>Web Developer</em></strong>, Relaxr 2015 - present<br>Developed a multi-column layout blog, landing page and contact forms that render on mobile devices</li><br><br>
-        
-      </ul> 
+              </ul> 
+      <a href="https://oliviaphifer.github.io/Relaxr/"><img src="relaxr-img.png alt="relaxr-website" style="border-style:none"></a>
     </main>
     
     <footer>
